--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
      --roboto-mono: 'Roboto Mono', monospace;
 }
 
+*{
+    font-weight: 400;
+}
+
 body{
     color:var(--branco);
     background-color: var(--cor-de-fundo);
@@ -19,4 +23,35 @@ body{
 .titulo-principal{
     font-family: var(--roboto-mono);
     font-size: 32px;
+}
+
+.titulo-segundario{
+    font-size: 24px;
+}
+
+.conteudo-titulo{
+    text-align: center;
+    margin-top: 80px;
+}
+
+.conteudo-senha{
+    background: var(--fundo-senha);
+    padding: 24px;
+    border-bottom: 6px solid var(--borda);
+}
+
+#campo-senha{
+    background-color: var(--fundo-senha);
+    border: none;
+    color: var(--branco);
+    font-family: var(--roboto-mono);
+    font-size: 40px;
+}
+
+#campo-senha:focus{
+    outline: none;
+}
+
+.conteudo{
+    max-width: 1200px;
 }
