--- a/style.css
+++ b/style.css
@@ -40,12 +40,14 @@ body{
     border-bottom: 6px solid var(--borda);
 }
 
+
 #campo-senha{
     background-color: var(--fundo-senha);
     border: none;
     color: var(--branco);
     font-family: var(--roboto-mono);
     font-size: 40px;
+    width: 70px;
 }
 
 #campo-senha:focus{
@@ -54,4 +56,37 @@ body{
 
 .conteudo{
     max-width: 1200px;
+    margin: 0 auto;
 }
+
+.parametro{
+    background-color: var(--fundo-texto);
+    border: 2px solid var(--borda);
+    margin-top: 32px;
+    padding: 24px;
+}
+
+.parametro-titulo{
+    font-family: var(--roboto-mono);
+    font-size: 28px;
+}
+
+.parametro-senha_titulo{
+    font-size: 24px;
+}
+
+.parametro-colana_senha{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.parametro-senha{
+    width: 50%;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .parametro-colana_senha{
+        flex-direction: row;
+    }
+} 
