--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root{
-     --branco:white;
-     --cor-de-fundo: #00162E;
-     --fundo-senha: #00244d;
-     --fundo-texto: #001E40;
-     --borda: #0075FF;
-     --roboto: 'Roboto', sans-serif;
-     --roboto-mono: 'Roboto Mono', monospace;
+    --branco: white;
+    --cor-de-fundo: #00162E;
+    --fundo-senha: #00244D;
+    --fundo-texto: #001E40;
+    --borda: #0075FF;
+    --roboto: 'Roboto', sans-serif;
+    --roboto-mono: 'Roboto Mono', monospace;
 }
 
 *{
@@ -15,7 +15,7 @@
 }
 
 body{
-    color:var(--branco);
+    color: var(--branco);
     background-color: var(--cor-de-fundo);
     font-family: var(--roboto);
 }
@@ -25,7 +25,7 @@ body{
     font-size: 32px;
 }
 
-.titulo-segundario{
+.titulo-secundario{
     font-size: 24px;
 }
 
@@ -35,11 +35,11 @@ body{
 }
 
 .conteudo-senha{
+    margin-top: 80px; 
     background: var(--fundo-senha);
     padding: 24px;
     border-bottom: 6px solid var(--borda);
 }
-
 
 #campo-senha{
     background-color: var(--fundo-senha);
@@ -47,7 +47,7 @@ body{
     color: var(--branco);
     font-family: var(--roboto-mono);
     font-size: 40px;
-    width: 70px;
+    width: 70%;
 }
 
 #campo-senha:focus{
@@ -71,11 +71,11 @@ body{
     font-size: 28px;
 }
 
-.parametro-senha_titulo{
-    font-size: 24px;
+.parametro-senha__titulo{
+    font-size:24px;
 }
 
-.parametro-colana_senha{
+.parametro-coluna__senha{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,8 +85,68 @@ body{
     margin: 0 auto;
 }
 
+.parametro-senha-botoes{
+    display: flex;
+    justify-content: center;
+}
+
+.parametro-senha__botao{
+    background-color: var(--fundo-texto);
+    color: var(--branco);
+    border: 2px solid var(--borda);
+    padding: 24px;
+    font-size: 24px;
+    cursor: pointer;
+}
+.parametro-senha__texto{
+    padding: 24px;
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    margin: 0;
+    font-size: 24px;
+}
+
+label{
+    font-size: 20px;
+}
+
+.checkbox{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.barra{
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+.fraca{
+    width: 25%;
+    background-color: #E71B32; 
+}
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00FF85;
+    width: 100%;
+}
+
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
+}
+
+
 @media screen and (min-width: 768px) {
-    .parametro-colana_senha{
+    .parametro-coluna__senha{
         flex-direction: row;
     }
-} 
+}
